[gd_scene load_steps=189 format=2]

[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=1]
[ext_resource path="res://sprite/bg_space2_halfres.png" type="Texture" id=2]
[ext_resource path="res://gif/ayy_lmao_title_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://scripts/menu.gd" type="Script" id=4]
[ext_resource path="res://sound/music/_009_system.ogg" type="AudioStream" id=5]
[ext_resource path="res://fonts/font_theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 600, 220 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 600, 220 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 600, 220 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 0, 600, 220 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 0, 600, 220 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 220, 600, 220 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 220, 600, 220 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 220, 600, 220 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 220, 600, 220 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 220, 600, 220 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 440, 600, 220 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 440, 600, 220 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 440, 600, 220 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 440, 600, 220 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 440, 600, 220 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 660, 600, 220 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 660, 600, 220 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 660, 600, 220 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 660, 600, 220 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 660, 600, 220 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 880, 600, 220 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 880, 600, 220 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 880, 600, 220 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 880, 600, 220 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 880, 600, 220 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1100, 600, 220 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 1100, 600, 220 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 1100, 600, 220 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 1100, 600, 220 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 1100, 600, 220 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1320, 600, 220 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 1320, 600, 220 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 1320, 600, 220 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 1320, 600, 220 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 1320, 600, 220 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1540, 600, 220 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 1540, 600, 220 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 1540, 600, 220 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 1540, 600, 220 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 1540, 600, 220 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1760, 600, 220 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 1760, 600, 220 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 1760, 600, 220 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 1760, 600, 220 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 1760, 600, 220 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1980, 600, 220 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 1980, 600, 220 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 1980, 600, 220 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 1980, 600, 220 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 1980, 600, 220 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2200, 600, 220 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 2200, 600, 220 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 2200, 600, 220 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 2200, 600, 220 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 2200, 600, 220 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2420, 600, 220 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 2420, 600, 220 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 2420, 600, 220 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 2420, 600, 220 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 2420, 600, 220 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2640, 600, 220 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 2640, 600, 220 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 2640, 600, 220 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 2640, 600, 220 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 2640, 600, 220 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 2860, 600, 220 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 2860, 600, 220 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 2860, 600, 220 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 2860, 600, 220 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 2860, 600, 220 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3080, 600, 220 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 3080, 600, 220 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 3080, 600, 220 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 3080, 600, 220 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 3080, 600, 220 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3300, 600, 220 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 3300, 600, 220 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 3300, 600, 220 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 3300, 600, 220 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 3300, 600, 220 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3520, 600, 220 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 3520, 600, 220 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 3520, 600, 220 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 3520, 600, 220 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 3520, 600, 220 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3740, 600, 220 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 3740, 600, 220 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 3740, 600, 220 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 3740, 600, 220 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 3740, 600, 220 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 3960, 600, 220 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 3960, 600, 220 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 3960, 600, 220 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 3960, 600, 220 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 3960, 600, 220 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4180, 600, 220 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 4180, 600, 220 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 4180, 600, 220 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 4180, 600, 220 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 4180, 600, 220 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4400, 600, 220 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 4400, 600, 220 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 4400, 600, 220 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 4400, 600, 220 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 4400, 600, 220 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4620, 600, 220 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 4620, 600, 220 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 4620, 600, 220 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 4620, 600, 220 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 4620, 600, 220 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 4840, 600, 220 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 4840, 600, 220 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 4840, 600, 220 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 4840, 600, 220 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 4840, 600, 220 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 5060, 600, 220 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 5060, 600, 220 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 5060, 600, 220 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 5060, 600, 220 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 5060, 600, 220 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 5280, 600, 220 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 5280, 600, 220 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 5280, 600, 220 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 5280, 600, 220 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 5280, 600, 220 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 5500, 600, 220 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 5500, 600, 220 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 5500, 600, 220 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 5500, 600, 220 )

[sub_resource type="AtlasTexture" id=131]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 5500, 600, 220 )

[sub_resource type="AtlasTexture" id=132]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 5720, 600, 220 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 5720, 600, 220 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 5720, 600, 220 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 5720, 600, 220 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 5720, 600, 220 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 5940, 600, 220 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 5940, 600, 220 )

[sub_resource type="AtlasTexture" id=139]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 5940, 600, 220 )

[sub_resource type="AtlasTexture" id=140]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 5940, 600, 220 )

[sub_resource type="AtlasTexture" id=141]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 5940, 600, 220 )

[sub_resource type="AtlasTexture" id=142]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 6160, 600, 220 )

[sub_resource type="AtlasTexture" id=143]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 6160, 600, 220 )

[sub_resource type="AtlasTexture" id=144]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 6160, 600, 220 )

[sub_resource type="AtlasTexture" id=145]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 6160, 600, 220 )

[sub_resource type="AtlasTexture" id=146]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 6160, 600, 220 )

[sub_resource type="AtlasTexture" id=147]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 6380, 600, 220 )

[sub_resource type="AtlasTexture" id=148]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 6380, 600, 220 )

[sub_resource type="AtlasTexture" id=149]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 6380, 600, 220 )

[sub_resource type="AtlasTexture" id=150]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 6380, 600, 220 )

[sub_resource type="AtlasTexture" id=151]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 6380, 600, 220 )

[sub_resource type="AtlasTexture" id=152]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 6600, 600, 220 )

[sub_resource type="AtlasTexture" id=153]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 6600, 600, 220 )

[sub_resource type="AtlasTexture" id=154]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 6600, 600, 220 )

[sub_resource type="AtlasTexture" id=155]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 6600, 600, 220 )

[sub_resource type="AtlasTexture" id=156]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 6600, 600, 220 )

[sub_resource type="AtlasTexture" id=157]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 6820, 600, 220 )

[sub_resource type="AtlasTexture" id=158]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 6820, 600, 220 )

[sub_resource type="AtlasTexture" id=159]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 6820, 600, 220 )

[sub_resource type="AtlasTexture" id=160]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 6820, 600, 220 )

[sub_resource type="AtlasTexture" id=161]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 6820, 600, 220 )

[sub_resource type="AtlasTexture" id=162]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 7040, 600, 220 )

[sub_resource type="AtlasTexture" id=163]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 7040, 600, 220 )

[sub_resource type="AtlasTexture" id=164]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 7040, 600, 220 )

[sub_resource type="AtlasTexture" id=165]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 7040, 600, 220 )

[sub_resource type="AtlasTexture" id=166]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 7040, 600, 220 )

[sub_resource type="AtlasTexture" id=167]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 7260, 600, 220 )

[sub_resource type="AtlasTexture" id=168]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 7260, 600, 220 )

[sub_resource type="AtlasTexture" id=169]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 7260, 600, 220 )

[sub_resource type="AtlasTexture" id=170]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 7260, 600, 220 )

[sub_resource type="AtlasTexture" id=171]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 7260, 600, 220 )

[sub_resource type="AtlasTexture" id=172]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 7480, 600, 220 )

[sub_resource type="AtlasTexture" id=173]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 7480, 600, 220 )

[sub_resource type="AtlasTexture" id=174]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 7480, 600, 220 )

[sub_resource type="AtlasTexture" id=175]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 7480, 600, 220 )

[sub_resource type="AtlasTexture" id=176]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 7480, 600, 220 )

[sub_resource type="AtlasTexture" id=177]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 7700, 600, 220 )

[sub_resource type="AtlasTexture" id=178]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 7700, 600, 220 )

[sub_resource type="AtlasTexture" id=179]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 7700, 600, 220 )

[sub_resource type="AtlasTexture" id=180]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 7700, 600, 220 )

[sub_resource type="AtlasTexture" id=181]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2400, 7700, 600, 220 )

[sub_resource type="SpriteFrames" id=182]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="menu" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 512, 300 )
motion_mirroring = Vector2( 1280, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="bg" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 3560, 800 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="MainLayer" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="MainLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 1 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainLayer/TabContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 1024.0
margin_bottom = 395.0

[node name="MarginContainer" type="MarginContainer" parent="MainLayer/TabContainer/VBoxContainer/CenterContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 220.0
rect_min_size = Vector2( 600, 220 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainLayer/TabContainer/VBoxContainer/CenterContainer/MarginContainer"]
frames = SubResource( 182 )
frame = 4
playing = true
centered = false

[node name="CenterContainer2" type="CenterContainer" parent="MainLayer/TabContainer/VBoxContainer"]
margin_top = 399.0
margin_right = 1024.0
margin_bottom = 425.0

[node name="Button" type="Button" parent="MainLayer/TabContainer/VBoxContainer/CenterContainer2"]
margin_left = 477.0
margin_right = 546.0
margin_bottom = 26.0
text = "PLAY"

[node name="VBoxContainer2" type="VBoxContainer" parent="MainLayer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="MainLayer/TabContainer/VBoxContainer2"]
margin_top = 281.0
margin_right = 1024.0
margin_bottom = 295.0
text = "you died lol"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="MainLayer/TabContainer/VBoxContainer2"]
margin_top = 299.0
margin_right = 1024.0
margin_bottom = 319.0

[node name="Button" type="Button" parent="MainLayer/TabContainer/VBoxContainer2/CenterContainer"]
margin_left = 448.0
margin_right = 575.0
margin_bottom = 26.0
text = "back to menu"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="MainLayer/TabContainer/VBoxContainer/CenterContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainLayer/TabContainer/VBoxContainer2/CenterContainer/Button" to="." method="_on_back_to_menu_button_pressed"]
